--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="hero-content">
       
       <div class="hero-text">
-        <h1 style="font-family: 'Source Sans 3', sans-serif;">Junior Data Scientist & Analyst</h1>
+        <h1 style="font-family: 'Source Sans 3', sans-serif;">Data Scientist & Analyst</h1>
         <p><strong>Turning data into clear, actionable insights.</strong> I specialize in data cleaning, analytics, building dashboards, machine learning and translate numbers into decisions using SQL, Python, Excel and Tableau. Open to remote roles and freelance projects.</p>
           
         <div class="hero-btns">
@@ -595,4 +595,5 @@ I approach every project with curiosity, rigor, and creativity, ensuring that th
 
 
 </body>
+
 </html>
